--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script>
-      
+      function moveDodgerLeft() {
+  var leftNumbers = dodger.style.left.replace('px', '')
+  var left = parseInt(leftNumbers, 10)
     </script>
   </body>
 </html>
